# hypr-kblayoutd

./: .SRCINFO  Cargo.toml  LICENSE  PKGBUILD  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
contrib/: hypr-kblayoutd.service  update-bin-pkgbuild.sh
docs/: benchmarks.md  validation.md
src/: config.rs  event.rs  ipc.rs  lib.rs  main.rs  single_instance.rs  state.rs
