[package]
name = "hypr-kblayoutd"
version = "0.1.0"
edition = "2021"
description = "Small Hyprland daemon that remembers keyboard layout per window"
license = "MIT"
repository = "https://github.com/kengzzzz/hypr-kblayoutd"

[dependencies]
env_logger = { version = "0.11", default-features = false, features = ["auto-color"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[profile.release]
strip = true
